<resources>
    <string name="facebook_app_id" translatable="false">546945202825468</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb546945202825468</string>
    <string name="chrome_cast">Chrome Cast</string>
    <string name="menu">Menu</string>
    <string name="playback_channel_name">channle name</string>
    <string name="default_notification_channel_id">channel</string>


    <string name="program">Programing</string>
    <string name="history">History</string>
    <string name="trivia">Trivias</string>
    <string name="sponsors">Sponsors</string>
    <string name="advnce_adjustments">advansed adjustment</string>
    <string name="en_vivo">LIVE</string>
    <string name="reproduciendo">Playing now</string>
    <string name="identify">Identify and comment</string>
    <string name="identificate">Identify</string>
    <string name="ingresar_con_google">Enter with Google</string>
    <string name="ingresar_con_facebook">Enter with Facebook</string>
    <string name="sacar_foto">Take Picture</string>
    <string name="elegir_galeria">Choose From Gallery</string>
    <string name="cancelar">Cancel</string>
    <string name="seleccionar_imagen">Choose picture</string>
    <string name="no_hay_trivias">No trivias available</string>
    <string name="te_avisaremos">You wil get notified when new trivias arrive</string>
    <string name="entendido">Understud!</string>
    <string name="resultado">Result:</string>
    <string name="publicaremos">Winner will be published once competition finish</string>
    <string name="gracias">Tank you for participate!</string>
    <string name="elegir">Choose</string>
    <string name="valido">competition valid from</string>
    <string name="al">to</string>
    <string name="correctas">correct</string>
    <string name="incorrectas">incorrect</string>
    <string name="segundos">seconds</string>
    <string name="incorrecto_sin_responder">Incorrect, no answer</string>
    <string name="correcto">Correct!</string>
    <string name="incorrecto">Incorrect!</string>
    <string name="siguiente_pregunta">Next question</string>
    <string name="comenta">comment</string>
    <string name="app_id" translatable="false">185BDB41</string>
    <string name="media_route_menu_title" translatable="false">title</string>

    <string name="login">IDENTIFY AND COMMENT</string>
    <string name="logout">LOG OUT</string>
    <string name="press_twice">Please click BACK again to exit</string>
    <string name="receiver_id" translatable="false">EB6FD2AE</string>
    <string name="cargando">CARGANDO…</string>


</resources>
