<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EE000000"
    android:orientation="vertical"
    android:paddingTop="10dp"
    tools:context=".features.menu.MenuFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:src="@mipmap/ic_launcher" />

        <ImageView
            android:id="@+id/close"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_close" />

    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingStart="30dp"
            android:paddingEnd="30dp">

            <TextView
                android:id="@+id/pro"
                style="@style/MenuText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/program" />

            <TextView
                android:id="@+id/his"
                style="@style/MenuText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/history" />

            <TextView
                android:id="@+id/trivia"
                style="@style/MenuText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trivia" />

            <TextView
                android:id="@+id/pub"
                style="@style/MenuText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sponsors" />


        </LinearLayout>

    </ScrollView>

    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/options"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:drawableLeft="@drawable/ic_settings"
        android:drawablePadding="10dp"
        android:fontFamily="@font/proxim"
        android:gravity="center"
        android:text="@string/advnce_adjustments"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/acc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="20dp"
        android:background="@color/colorAccent"
        android:drawablePadding="8dp"
        android:fontFamily="@font/proxima_semibold"
        android:gravity="center"
        android:padding="6dp"
        android:text="@string/logout"
        android:textAllCaps="false"
        android:textColor="#000"
        android:textSize="18sp" />
</LinearLayout>