<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0F0F0F"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="24dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_account"
            android:alpha="0.5"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/identificate"
            android:textColor="#FFF"
            android:textSize="32sp" />

        <Button
            android:id="@+id/loginGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E43131"
            android:text="@string/ingresar_con_google"/>

        <Button
            android:id="@+id/loginFace"
            android:layout_marginTop="10dp"
            android:background="#315EE4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ingresar_con_facebook"/>



        <com.facebook.login.widget.LoginButton
            android:id="@+id/buttonFacebookLogin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:visibility="gone"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>