<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000">


    <LinearLayout
        android:layout_marginBottom="20dp"
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp"
        android:visibility="visible">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="120dp">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp" />

            <ImageView
                android:id="@+id/close2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="end"
                android:src="@drawable/ic_close" />

        </FrameLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_weight="1"
                android:id="@+id/mtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/proxima_bold"
                android:gravity="center"
                android:text="Que tanto sabes de rock"
                android:textColor="#FFF"
                android:textSize="38sp" />

            <View
                android:layout_width="100dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:background="#FFF" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="@font/proxima_bold"
                    android:text="@string/resultado"
                    android:textColor="#FFF"
                    android:textSize="34sp" />

                <TextView
                    android:id="@+id/success"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/proxim"
                    android:text="0 correctas"
                    android:textColor="#FFF"
                    android:textSize="28sp" />

                <TextView
                    android:id="@+id/fail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/proxim"
                    android:text="0 incorrectas"
                    android:textColor="#FFF"
                    android:textSize="28sp" />
            </LinearLayout>

            <Button
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="#000"
                android:id="@+id/btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/publicaremos" />

            <View
                android:layout_width="100dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="#FFF" />
        </LinearLayout>

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/proxima_bold"
            android:gravity="center"
            android:text="@string/gracias"
            android:textColor="#FFF"
            android:textSize="38sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>