<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".features.trivia.TriviaActivity">

    <ProgressBar
        android:id="@+id/progress_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="40dp"
        android:visibility="visible">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="120dp">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp" />

            <ImageView
                android:id="@+id/close2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="end"
                android:src="@drawable/ic_close" />

        </FrameLayout>

        <TextView
            android:id="@+id/upText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/proxima_semibold"
            android:gravity="center"
            android:textColor="#FFF"
            android:textSize="20sp" />

        <View
            android:layout_width="100dp"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:background="#FFF" />

        <TextView
            android:id="@+id/mtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:fontFamily="@font/proxima_bold"
            android:gravity="center"
            android:textColor="#FFF"
            android:textSize="40sp" />

        <View
            android:layout_width="100dp"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:background="#FFF" />

        <TextView
            android:id="@+id/bottomText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/proxima_semibold"
            android:gravity="center"
            android:textColor="#FFF"
            android:textSize="20sp" />

        <View
            android:layout_width="100dp"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:background="#FFF" />

        <TextView
            android:id="@+id/valid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:textColor="#FFF" />

        <Button
            android:id="@+id/start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="Comenzar"
            android:textColor="#000" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp"
        android:visibility="gone">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/quiz"
            android:tint="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/no_hay_trivias"
            android:textColor="@android:color/white"
            android:textSize="24sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:alpha=".8"
            android:gravity="center"
            android:text="@string/te_avisaremos"
            android:textSize="16sp" />


        <Button
            android:id="@+id/backButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textColor="#000"
            android:background="@color/colorAccent"
            android:text="@string/entendido" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/trivia_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="40dp"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/close"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="end"
                android:layout_marginEnd="20dp"
                android:src="@drawable/ic_close" />

        </LinearLayout>

        <com.emperador.radio2.core.utils.NoSwipePager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </FrameLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>